load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_test")

pybind_extension(
    name = "random_events_lib",  # This name is not actually created!
    srcs = ["bindings.cpp"],
    deps = [
        "//:random_events_lib",
    ],
)

py_test(
    name = "python_binding_example",
    srcs = ["python_binding_example.py"],
    deps = [
        ":random_events_lib",
    ],
)